<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/decks" />
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/card_browser" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
