<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.RegisterActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:layout_marginTop="24dp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="to your Study Buddy!"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="48sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />



            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password_button"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/white"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:elevation="0dp"
                android:textSize="12sp"/>


                <Button
                android:elevation="4dp"
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="250dp"
                android:paddingHorizontal="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:text="@string/action_sign_in_short"
                android:background="@drawable/sign_in_btn"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/sign_in_google_button"
                android:layout_marginTop="8dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:layout_gravity="center"
                app:isDarkTheme="false" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>