<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.CreateEditCardActivity"
    tools:showIn="@layout/activity_create_new_card"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:paddingTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_subject_deck"
                android:textSize="20sp"/>
            <Spinner
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/select_subject_spinner"
                android:layout_marginBottom="16dp">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_front_et"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textSize="20sp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_back_et" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>





</LinearLayout>