<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.ModeChooserActivity"
    tools:showIn="@layout/activity_mode_chooser">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subject_mode_chooser_tv"
                android:ellipsize="end"
                android:text="@string/subject"
                android:maxLines="1"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="8dp"
                android:layout_height="250dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/review_mode_cv"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/mode_chooser_review_ll"
                    android:transitionName="hero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/review_mode"
                        android:src="@drawable/ic_toys_black_24dp"/>
                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:layout_marginTop="16dp"
                        android:text="@string/review_mode"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/test_mode_cv"
                android:layout_width="match_parent"
                app:cardCornerRadius="8dp"
                android:layout_height="250dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/test_mode"
                        android:src="@drawable/ic_sentiment_very_dissatisfied_black_24dp"/>
                    <TextView
                        android:textColor="@android:color/black"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:layout_marginTop="16dp"
                        android:text="@string/test_mode"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>




</LinearLayout>